structmeta-tests/tests/compile_fail/parse/single_variant_fail.rs
structmeta_tests::parse_single_variant!(10 10);

fn main() {}
