structmeta-tests/tests/compile_fail/parse/single_variant_fail.stderr
error: expected string literal
 --> $DIR/single_variant_fail.rs:1:44
  |
1 | structmeta_tests::parse_single_variant!(10 10);
  |                                            ^^
